[workspace]
members = [
    "bonding-core",
    "bonding-client",
    "bonding-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bonding Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Donovoi/Bonding"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Networking
socket2 = "0.5"

# TUN/TAP devices
tun-rs = { version = "2.7", features = ["async_tokio"], default-features = false }

# Cryptography
chacha20poly1305 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Windows-specific
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"] }
wintun = "0.5"

# Testing
mockall = "0.13"
