[workspace]
members = ["bonding-core", "bonding-client", "bonding-server"]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["Bonding Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Donovoi/Bonding"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# CLI + TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = { version = "0.28", default-features = false, features = [
    "crossterm",
] }
crossterm = "0.28"

# Config files
directories = "5.0"
toml = "0.8"

# Networking
socket2 = "0.5"

# TUN/TAP devices
tun-rs = { version = "2.7", features = [
    "async_tokio",
], default-features = false }

# Cryptography
chacha20poly1305 = "0.10"
rand = "0.8"

# Encoding helpers
base64 = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Human-friendly duration parsing/printing for config files
humantime-serde = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Windows-specific
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
wintun = "0.5"

# Testing
mockall = "0.13"
